inbox.html changed

--- a/inbox.html
+++ b/inbox.html
@@ -586,7 +586,7 @@
                                                             </td>
                                                             <td>
                                                                 <a href="email-read.html"><i class="fa fa-circle text-pink m-r-15"></i>Lorem
-                                                                    ipsum dolor sit amet, consectetuer adipiscing elit</a>
+                                                                    <!-- ipsum dolor sit amet, consectetuer adipiscing elit</a> -->
                                                             </td>
                                                             <td>
                                                                 <i class="fa fa-paperclip"></i>
