--- a/inbox.html
+++ b/inbox.html
@@ -9,7 +9,7 @@
 
     <link rel="shortcut icon" href="images/favicon_1.ico">
 
-    <title>Atriay - Responsive Admin Dashboard Template</title>
+    <title>SPA - Responsive Admin Dashboard Template</title>
 
     <!-- Base Css Files -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -649,7 +649,7 @@
                     </div> <!-- content -->
 
                     <footer>
-                        2019 © <a href="#">Atriya.com</a>
+                        2019 © <a href="#">hosseinabbasabadi.ir</a>
                     </footer>
 
                 </div>
